Radio inputs should now display on IE8, fixes #406

--- a/app/assets/stylesheets/surveys/radio_input.scss
+++ b/app/assets/stylesheets/surveys/radio_input.scss
@@ -1,5 +1,7 @@
 // DEFAULTS FOR RADIO
-.input-container input[type=radio] { display: none; }
+.input-container:not(#foo) input[type=radio] {
+  display: none;
+}
 
 .label-default {
   background-color: transparent;
